Add RibRoute test cases

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "python.pythonPath": "env/bin/python3.5",
+    "python.pythonPath": "env/bin/python3.7",
     "cSpell.words": [
-        "pytest"
+        "pytest",
+        "pytricia"
     ]
 }
