--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 astroid==2.3.3
 attrs==19.3.0
+certifi==2020.4.5.1
+chardet==3.0.4
+codecov==2.0.22
+coverage==5.1
+idna==2.9
 importlib-metadata==1.6.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
@@ -13,8 +18,11 @@ pylint==2.4.4
 pyparsing==2.4.7
 pytest==5.4.1
 pytricia==1.0.1
+requests==2.23.0
+rope==0.16.0
 six==1.14.0
 typed-ast==1.4.1
+urllib3==1.25.8
 wcwidth==0.1.9
 wrapt==1.11.2
 zipp==1.2.0
